Oct 16, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- show punkbuster warning only once

Oct 15, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- switch fix conversion when adding ut2s as gps
- update german translation

Oct 15, 2002: Alex Burger <alex@users.sourceforge dot net>
- Few minor changes to make it compile on gcc <3
- Properly fixed create_server_type_menu and create_master_type_menu
  bugs

Oct 14, 2002: Alex Burger <alex@users.sourceforge dot net>
- Fixed create_server_type_menu bug
- Added punkbuster (and locked_punkbuster) XPMs
- Modified create_server_type_menu to show all server types until bug
  can be figured out
- Updated help about and AUTHORS page with contributors
- Updated reserved slots support to use integers (Jochen Baier)
- Added reserved slots support for redial from Jochen Baier
  (email@jochen-baier.de).  Server properties page allows setting 
  for reserved admin slots for the server.
  
Oct 13, 2002: Alex Burger <alex@users.sourceforge dot net>
- Updated q3_exec to search ~/.q3a and then real game dir for
  mods.  Tested with osp (~/.q3a/Osp)
- Created q2_exec function to be used by Quake2 to search ~/.quake2
  folder and then real game dir for mods.  Tested find_game_dir with
  Quake2-r0.14.1.  Connects and then restarts using lowercase name. 
  May work with other versions of Quake2.  Leaving in.
- g_free in find_game_dir and exec functions
- find_game_dir fixes:  Allow symlinks, use const
- Minor fix to ut_exec if there are no custom arguments

Oct 13, 2002: Jordi Mallach <jordi@sindominio.net>
- add redial.c to POTFILES.
- updated Catalan and Spanish translations.

Oct 13, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use server_clist_set_list in server_clist_build_filtered. It's actually
  faster to rebuild the displayed server list from scratch than to determine
  which servers have to be deleted or added.
- when deleting last server from favorites, do not display it any longer